2010-03-25  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by David Levin.

        Add a page on how to ask questions
        https://bugs.webkit.org/show_bug.cgi?id=35223

        * asking_questions.html: Added.
        Add a page on how to ask questions based on Ariya Hidayat's mail: how
        to get help effectively
        (http://article.gmane.org/gmane.os.opendarwin.webkit.user/145/match=get+help+effectively)

        * contact.html: Tweaked the wording to make it more clear what the
        mailing list are used for. Also changed the formatting to better
        underline the different mailing lists.

2010-03-24  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Anders Carlsson..

        Update Security Group Members list.

        * security/security-group-members.html:

2010-03-22  Maciej Stachowiak  <mjs@apple.com>

        (Not reviewed.)

        Add another example.

        * demos/accessible-ascii-art/butterfly-figure.html: Added.

2010-03-22  Maciej Stachowiak  <mjs@apple.com>

        (Not reviewed.)

        Add example of accessible ASCII art for HTML WG.

        * demos/accessible-ascii-art: Added.
        * demos/accessible-ascii-art/butterfly.html: Added.

2010-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        WebKit blog should be valid HTML5
        https://bugs.webkit.org/show_bug.cgi?id=36410

        * blog/wp-content/themes/webkit/comments-popup.php:
        * blog/wp-content/themes/webkit/footer.php:
        * blog/wp-content/themes/webkit/header.php:

2010-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        Fix a bunch of HTML5 validation errors on various pages.
        https://bugs.webkit.org/show_bug.cgi?id=36409

        * building/build.html:
        * building/checkout.html:
        * building/debug.html:
        * building/run.html:
        * building/tools.html:
        * coding/coding-style.html:
        * coding/contributing.html: