@@ -27,8 +27,7 @@ These include advice on other ways to find answers and help that go beyond the W
 <h2> Search the archives </h2>
 
 <p>Your question may have already been answered. Make sure you search at least webkit-help and webkit-dev archives.
-There are two ways to query the archives: doing a web search or the <a
-href="http://dir.gmane.org/search.php?match=webkit">gmane archives</a>.</p>
+There are two ways to query the archives: doing a web search or the <a href="http://dir.gmane.org/search.php?match=webkit">gmane archives</a>.</p>
 <p>You can limit a web search to the mailing lists' archives by using "site:lists.webkit.org".
 <p>Here is a small example on how to query information about 'RenderLayer' on the previous mailing lists archives:</p>
 <ul>
@@ -39,13 +38,13 @@ href="http://dir.gmane.org/search.php?match=webkit">gmane archives</a>.</p>
 <h2> Be precise </h2>
 <p>Give as many details as possible. Generic questions will likely not get a valuable answer.</p>
 
-<p>Make sure you include at least:
+<p>Make sure you include at least:</p>
 <ul>
 <li> which port are you using: Mac, Windows, Chromium, Qt, Gtk, Wx, ...</li>
 <li> which operating system are you using? For Linux, paste the result of <code>uname -a</code></li>
 </ul>
-</p>
-<p>Depending on your issue, make also sure to include:
+
+<p>Depending on your issue, make also sure to include:</p>
 <ul>
 <li> the revision or branch used</li>
 <li> which compiler are you using? (including the version)</li>
@@ -54,7 +53,6 @@ href="http://dir.gmane.org/search.php?match=webkit">gmane archives</a>.</p>
 <li> the <strong>complete output</strong> of the command. Do not paste only what you think is relevant.</li>
 <li> the expected result</li>
 </ul>
-</p>
 
 <p>If one of these item is very long (hundreds of lines), do not paste it in the email. Instead use http://pastebin.com/
 (or other similar services) and include the link in the email.</p>
@@ -86,7 +84,7 @@ I have looked at the archives and the commits but did not find any solution. Doe
 paced. Often the requested feature is already implemented although it has
 not been widely used yet. Bear in mind that sometimes the level of
 supports between different ports is not the same.</p>
-<p>The following links are also useful:
+<p>The following links are also useful:</p>
 <ul>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(HTML)">Wikipedia comparison of the layout engines: HTML support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(XML)">Wikpedia comparison of the layout engines: XML support</a><br></li>
@@ -94,10 +92,9 @@ supports between different ports is not the same.</p>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Document_Object_Model)">Wikipedia comparision of the layout engines: DOM support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(HTML_5)">Wikipedia comparision of the layout engines: HTML5 support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(ECMAScript)">Wikipedia comparison of the layout engines: ECMAScript support</a><br></li>
-<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Scalable_Vector_Graphics)">Wikipedia comparison of the layout engines: SVG support<br></li>
+<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Scalable_Vector_Graphics)">Wikipedia comparison of the layout engines: SVG support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Non-standard_HTML)">Wikipedia comparison of the layout engines: non standard HTML support</a><br></li>
 </ul>
-</p>
 
 <h3> I want to port WebKit to a new platform </h3>
 
