@@ -1,3 +1,12 @@
+2010-03-25  Joseph Pecoraro  <joepeck@webkit.org>
+
+        Reviewed by Timothy Hatcher.
+
+        New Asking Questions Page is not Valid HTML5
+        https://bugs.webkit.org/show_bug.cgi?id=36605
+
+        * asking_questions.html: fixed issues raised by the validator.
+
 2010-03-25  Julien Chaffraix  <jchaffraix@webkit.org>
 
         Reviewed by David Levin.
